Fix typo in the project name (#15) (#17)